# POE

./: .gitignore  README.md
data/: dataset_1_1_1000
poelib/: CMakeLists.txt
poelib/include/: poe_hoggart.h
poelib/src/: poe_hoggart.cpp
poelib/src/dcdflib/: cdflib.h  dcdflib.c
poetest/: CMakeLists.txt  test.cpp
src/: poe_hoggart.cpp  poe_hoggart.h  sortMatlab.h  test.cpp
